--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,30 @@ input:focus, select:focus, #btn:focus {
    border: 1px solid #341539
 }
 
+.footer {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+   margin-top: 4rem;
+   margin-bottom: 0.5rem;
+}
+
+.footer .social {
+	padding-top: 15px;
+	padding-bottom: 1rem;
+	display: flex;
+	justify-content: space-between;
+}
+
+.fa-lg {
+   color: #341539;
+}
+
+.fa-lg:hover {
+  color: #341539e8;
+}
+
 #circles{
 	width:100%;
    margin: 2rem auto;
